@@ -1,18 +1,0 @@
-/*
- * @Author:
- *  #Weilun Fong | wlf(at)zhishan-iot.tk
- * @E-mail:mcu(at)zhishan-iot.tk
- * @File-description:
- *  #provide prototypes for routines that instruct the compiler to generate intrinsic code
- *  #include similar functions like <instrins.h> in Keil
- * @Required-complier:SDCC
- * @Support-mcu:Intel MCS-51 based microprocessors
- * @Version:V0
- */
-
-#ifndef ___INTRASM_H___
-#define ___INTRASM_H___
-
-#define _nop_() __asm NOP __endasm
-
-#endif
