@@ -13,8 +13,8 @@
 #define ___UTIL_H___
 
 /* ----- @header file ----- */
+#include <compiler.h>
 #include "stc10.h"
-#include "intrasm.h"
 #include "macro.h"
 
 /* ----- @function ----- */
